--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 <center><h1> Ankit Samantaray</h1>
 <hr>
   <h2>html image</h2>
-<img src="ankit.jpg" alt="ankit.jpg2>  <br>
-<hr>
-<h1> I am a student of class 7</h1>  <br>
-<hr>
-<h1> I am studing in ST Xavier,s High School in Odisha</h1>  <br>
+<img src="ankit.jpg" alt="ankit.jpg2>  
 </body>
 
 </html>
