--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center><h1> Ankit Samantaray</h1>
 <hr>
   <h2>html image</h2>
-<img src="ankit.jpg" alt="ankit.jpg2> 
+  <img src="ankit.jpg" alt="ankit.jpg2></center>
                           
 </body>
 
